# compute-god

./: .gitignore  README.md  pyproject.toml  train_small_network.py
docs/: TODO.md  beijing-folded-operating-system-textbook.md  bingmeizi-spontaneous-symmetry-breaking.md  buidl-in-public.md  buidl-universes.md  buidl-with-public-design-and-implementation.md  chengdu-itinerary.md  common-prosperity.md  compute-god-entropy-map.md  compute-god-recursive-world-generator.md  daoyi-guard-philosophy.md  drug-lab-design-and-implementation.md  er-equals-epr-proof.md  everything-demonstration-foundations.md  happiness_scheduler.md  haskell_overview.md  heroism-universe.md  incremental-construction-of-minimal-acyclic-finite-state-automata.md  intelligent-driving-lab.md  marketing-concept-math.md  meng-shi-tiantian-he-meiyu-zui-mei-de-jiayuan.md  meta-spacetime-foundations.md  meta-spacetime-proof.md  metaverse-triad.md  minecraft-performance-analysis.md  minimal-universe-axioms.md  miyu-tiantian-new-era-minecraft-universe.md  motivation.md  physical-everything-demonstration.md  publish_to_pypi.md  self-application-er-epr.md  self-organization-gradient-descent.md  spiritual-belief-and-political-rights.md  system_screenshot_architecture.md  tian-ren-he-yi.md  tian-tian-universe-in-minecraft.md  tiaocanxia-universe.md  train-26m-parameter-gpt.md  uv-workflow.md  vibe-coded-landing-page-learnings.md  (+1 more)
lib/: AGENTS.md  __init__.py  bosons.py  gluons.py  leptons.py  particles.py  quarks.py  standard_model.py
tests/: test_abura_soba.py  test_adhd_coe.py  test_anti_quantum.py  test_august_cycle.py  test_automata_catalogue.py  test_bingzi.py  test_catalysis.py  test_cli_interface.py  test_complex_dynamics.py  test_complex_network.py  test_cooperation_evolution.py  test_courtship_cohomology.py  test_ctc.py  test_degree_space.py  test_dianfen_changzi.py  test_drug_lab.py  test_gift.py  (+84 more)
(+142 files in other folders)
