[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compute-god"
version = "0.1.0"
description = "Minimal meta-computation framework for self-reference and fixpoints"
authors = [
  { name = "Compute-God Contributors" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://example.com/compute-god"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
