[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "compute-god"
version = "0.1.0"
description = "Minimal meta-computation framework for self-reference and fixpoints"
authors = [
  { name = "Compute-God Contributors" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "pillow>=10.0",
]

[project.scripts]
compute-god = "compute_god.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.9",
]

[project.urls]
Homepage = "https://example.com/compute-god"

[tool.uv]
managed = true
dev-groups = ["dev"]

[tool.uv.workspace]
members = ["."]

[tool.uv.scripts]
test = "pytest"
test-cov = "pytest --cov=compute_god --cov-report=term-missing"
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "mypy src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN204"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = false
ignore_missing_imports = true
python_version = "3.11"
